[gd_scene load_steps=20 format=2]

[ext_resource path="res://Prefabs/Bullet.gd" type="Script" id=1]
[ext_resource path="res://assets/pink_particleng.png" type="Texture" id=2]
[ext_resource path="res://material/breatheShader.shader" type="Shader" id=3]
[ext_resource path="res://Prefabs/JumpRegain.tscn" type="PackedScene" id=4]
[ext_resource path="res://Prefabs/SoundBullet.gd" type="Script" id=5]
[ext_resource path="res://assets/sound/death/Hurt4.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sound/death/Hurt5.wav" type="AudioStream" id=7]

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 1, 1, 1, 0.196078, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 1
emission_sphere_radius = 2.37
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.4
color_ramp = SubResource( 6 )

[sub_resource type="CircleShape2D" id=1]
radius = 0.533082

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/scale_up = Vector2( 0.2, 0.2 )

[sub_resource type="CircleShape2D" id=3]
radius = 4.3453

[sub_resource type="CircleShape2D" id=4]
radius = 5.20199

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.0170316, 0.931874 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.309804, 0.470588, 1, 1, 0.309804, 0.470588, 0 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 0.8608 ), 0.0, 0.0, 0, 0, Vector2( 0.994873, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.1
scale_curve = SubResource( 11 )
color_ramp = SubResource( 9 )

[node name="Bullet" type="RigidBody2D"]
position = Vector2( 16, -8 )
rotation = 2.09439
collision_layer = 128
collision_mask = 8
mass = 100.0
gravity_scale = 0.0
continuous_cd = 2
can_sleep = false
script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
lifetime = 0.2
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 2 )

[node name="Bullet_shape" type="CollisionShape2D" parent="."]
scale = Vector2( 3.08, 3.08 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
rotation = 0.261799
scale = Vector2( 0.687654, 0.687654 )
texture = ExtResource( 2 )

[node name="Ground detector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground detector"]
shape = SubResource( 3 )

[node name="BounceHit" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -9.53674e-007 )

[node name="CollisionShape2D" parent="BounceHit" index="0"]
shape = SubResource( 4 )

[node name="DestructionTimer" type="Timer" parent="."]

[node name="death_particle" type="Particles2D" parent="."]
emitting = false
amount = 1
lifetime = 0.4
one_shot = true
local_coords = false
process_material = SubResource( 12 )
texture = ExtResource( 2 )

[node name="Sound" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Hit1" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource( 6 )
max_distance = 200.0
bus = "Player"

[node name="Hit2" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource( 7 )
max_distance = 200.0
bus = "Player"
[connection signal="body_entered" from="Ground detector" to="." method="_on_Ground_detector_body_entered"]
[connection signal="bounced_player" from="BounceHit" to="." method="_on_BounceHit_bounced_player"]

[editable path="BounceHit"]
